--- a/web/src/index.css
+++ b/web/src/index.css
@@ -17,12 +17,15 @@
 body {
   margin: 0;
   padding: 0;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial,
+    sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
+  font-size: 14px;
+  font-weight: 300;
+  line-height: 1.5;
+  color: #24292e;
+  background-color: #fff;
 }
 body * {
-  font-family: 'Roboto', sans-serif;
-  font-weight: 300;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-font-smoothing: antialiased;
   box-sizing: border-box;
 }
 button {
