--- a/web/src/index.css
+++ b/web/src/index.css
@@ -19,9 +19,9 @@ body {
   padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial,
     sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
-  font-size: 14px;
+  font-size: 21px;
   font-weight: 300;
-  line-height: 1.5;
+  line-height: 1.58;
   color: #24292e;
   background-color: #fff;
 }
@@ -54,10 +54,6 @@ h3 {
   font-size: 20px;
   margin: 6px 0;
 }
-span,
-p {
-  font-size: 16px;
-}
 ol,
 ul {
   list-style: none;
@@ -79,11 +75,20 @@ dl dt {
   color: white;
 }
 
+.RichTextContent > :first-child {
+  margin-top: 0;
+}
+
 @keyframes Spin {
   from {
     transform: rotate(0deg);
   }
   to {
     transform: rotate(360deg);
+  }
+}
+@media (max-width: 767px) {
+  body {
+    font-size: 18px;
   }
 }
