--- a/web/src/index.css
+++ b/web/src/index.css
@@ -13,10 +13,23 @@
   --error-color: hsla(348, 100%, 55%, 1);
   --error-color-alpha02: hsla(348, 100%, 55%, 0.2);
 }
+html,
+body {
+  height: 100%;
+  width: 100%;
+  padding: 0px;
+  margin: 0px;
+}
+html {
+  box-sizing: border-box;
+}
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
+}
 
 body {
-  margin: 0;
-  padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial,
     sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
   font-size: 21px;
@@ -25,9 +38,12 @@ body {
   color: #24292e;
   background-color: #fff;
 }
-body * {
-  box-sizing: border-box;
+
+#root {
+  width: 100%;
+  height: 100%;
 }
+
 button {
   border: none;
   border-radius: 0;
@@ -56,9 +72,9 @@ h3 {
 }
 ol,
 ul {
-  list-style: none;
+  /* list-style: none;
   margin: 0;
-  padding: 0;
+  padding: 0; */
 }
 dl {
   margin: 0;
