--- a/src/Components/Buttons/Button.css
+++ b/src/Components/Buttons/Button.css
@@ -14,6 +14,9 @@
     outline 500ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
+.Button.fit-content {
+  width: fit-content;
+}
 .Button.Disabled {
   cursor: default;
 }
@@ -71,10 +74,11 @@
 
 .Button.Default {
   color: var(--black);
-  background-color: var(--default-color);
+  background-color: transparent;
+  border: 1px solid var(--default-color);
 }
 .Button.Default:hover {
-  background-color: var(--default-color);
+  /* background-color: var(--default-color); */
 }
 .Button.Default.Disabled {
   color: hsla(0, 0%, 0%, 0.5);
