Post new post rules

--- a/src/Components/Editor/EditorControls.css
+++ b/src/Components/Editor/EditorControls.css
@@ -2,8 +2,11 @@
   display: flex;
   flex-direction: row;
   /* border-bottom: 1px solid var(--black-alpha025); */
-  box-shadow: inset 0px -1px 0px 0px var(--black-alpha025);
+  /* box-shadow: inset 0px -1px 0px 0px var(--black-alpha025); */
 }
 .EditorControls > * + * {
   margin-left: 10px;
+}
+.EditorControls > .EditorControlsButton {
+  border: none;
 }
