--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 :root {
   --black: hsla(0, 0%, 0%, 0.8);
   --black-alpha025: hsla(0, 0%, 0%, 0.25);
+  --default-text-color: #24292e;
   --default-color: hsla(0, 0%, 88%, 1);
   --default-color-alpha07: hsla(0, 0%, 88%, 0.7);
   --default-color-alpha02: hsla(0, 0%, 88%, 0.2);
@@ -35,7 +36,7 @@ body {
   font-size: 21px;
   font-weight: 300;
   line-height: 1.58;
-  color: #24292e;
+  color: var(--default-text-color);
   background-color: #fff;
 }
 
