--- a/src/App/AppBar/AppBar.css
+++ b/src/App/AppBar/AppBar.css
@@ -8,6 +8,8 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  background: white;
+  box-shadow: rgba(0, 0, 0, 0.15) 0px 2px 6px -1px;
 }
 @media only screen and (max-width: 610px) {
   .AppBar {
