Display comment count

--- a/src/Components/Discussions/Discussions.css
+++ b/src/Components/Discussions/Discussions.css
@@ -2,3 +2,9 @@
   color: var(--default-text-color);
   text-decoration: none;
 }
+.Discussions h3 {
+  margin: 0;
+}
+.Discussions * {
+  line-height: 36px;
+}
