--- a/src/App/AppBar/AppBar.css
+++ b/src/App/AppBar/AppBar.css
@@ -10,6 +10,7 @@
   justify-content: space-between;
   background: white;
   box-shadow: rgba(0, 0, 0, 0.15) 0px 2px 6px -1px;
+  z-index: 1;
 }
 @media only screen and (max-width: 610px) {
   .AppBar {
