--- a/src/App/AppBar/AppBar.css
+++ b/src/App/AppBar/AppBar.css
@@ -1,29 +1,15 @@
 .AppBar {
   height: 48px;
   width: 100vw;
-  padding: 0 24px;
   position: fixed;
   top: 0;
   left: 0;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
   background: white;
   box-shadow: rgba(0, 0, 0, 0.15) 0px 2px 6px -1px;
   z-index: 1;
 }
-@media only screen and (max-width: 610px) {
-  .AppBar {
-    padding: 0 0 0 12px;
-  }
-}
-.AppBarNav {
-  flex-grow: 1;
-  display: flex;
-  justify-content: flex-start;
-}
 .AppBarNav > a {
-  color: white;
+  color: var(--primary-color-alpha07);
 }
 .AppBarNav > * + * {
   margin-left: 24px;
