--- a/src/Components/Inputs/RadioGroup.css
+++ b/src/Components/Inputs/RadioGroup.css
@@ -2,18 +2,6 @@
   border: none;
   min-width: 100px;
 }
-.RadioGroupFieldSet legend {
-  color: rgba(0, 0, 0, 0.54);
-  padding: 0;
-  line-height: 16px;
-  font-size: 16px;
-  text-align: left;
-}
-.RadioGroupFieldSet label {
-  color: rgba(0, 0, 0, 0.87);
-  font-size: 14px;
-  line-height: 20px;
-}
 
 .Radio {
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
@@ -21,25 +9,14 @@
 .Radio .RadioSpan {
   position: relative;
   transition: none;
-  width: 44px;
-  height: 44px;
+  width: 36px;
+  height: 36px;
   padding: 0;
   text-align: center;
   border-radius: 50%;
 }
-.Radio .RadioSpan input {
-  top: 0;
-  left: 0;
-  width: 100%;
-  cursor: inherit;
-  height: 100%;
-  margin: 0;
-  opacity: 0;
-  padding: 0;
-  position: absolute;
-}
 .Radio .RadioSpan svg {
-  fill: rgba(0, 0, 0, 0.54);
+  fill: var(--default-text-color-alpha07);
   width: 24px;
   height: 24px;
   display: inline-block;
