--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@
   --black: hsla(0, 0%, 0%, 0.8);
   --black-alpha025: hsla(0, 0%, 0%, 0.25);
   --default-text-color: hsl(210, 12%, 16%);
-  --default-text-color-alpha07: hsl(210, 12%, 16%, 0.7);
+  --default-text-color-alpha07: hsla(210, 12%, 16%, 0.7);
   --default-color: hsla(0, 0%, 88%, 1);
   --default-color-alpha07: hsla(0, 0%, 88%, 0.7);
   --default-color-alpha02: hsla(0, 0%, 88%, 0.2);
@@ -65,6 +65,12 @@ h3 {
   font-weight: 300;
   font-size: 20px;
   margin: 6px 0;
+}
+label {
+  font-size: 16px;
+}
+legend {
+  color: var(--default-text-color-alpha07);
 }
 ol,
 ul {
