--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,7 @@
   --black-alpha025: hsla(0, 0%, 0%, 0.25);
   --default-text-color: hsl(210, 12%, 16%);
   --default-text-color-alpha07: hsla(210, 12%, 16%, 0.7);
+  --default-text-color-alpha04: hsla(210, 12%, 16%, 0.4);
   --default-color: hsla(0, 0%, 88%, 1);
   --default-color-alpha07: hsla(0, 0%, 88%, 0.7);
   --default-color-alpha02: hsla(0, 0%, 88%, 0.2);
