TextInput refactor, Onboarding page

--- a/src/Components/Layout/Flex.css
+++ b/src/Components/Layout/Flex.css
@@ -27,6 +27,9 @@
 .Flex.column.Spacing-large > * + * {
   margin-top: 24px;
 }
+.Flex.MaxWidth-medium {
+  max-width: 600px;
+}
 .Flex.JustifyContent-start {
   justify-content: flex-start;
 }
