--- a/src/index.css
+++ b/src/index.css
@@ -105,3 +105,11 @@ dl dt {
     font-size: 18px;
   }
 }
+@keyframes Shimmer {
+  0% {
+    background-position: -468px 0;
+  }
+  100% {
+    background-position: 468px 0;
+  }
+}
