--- a/src/Components/Editor/Editor.css
+++ b/src/Components/Editor/Editor.css
@@ -6,3 +6,19 @@
   white-space: pre-wrap;
   word-wrap: break-word;
 }
+.Editor p {
+  margin: 0;
+  padding: 6px 0;
+  min-height: 45px;
+  display: flex;
+  align-items: center;
+}
+
+.Editor p > span {
+  height: 33px;
+  min-width: 1px;
+}
+
+.Editor .Dead {
+  background: yellow;
+}
