--- a/src/Components/Editor/Editor.css
+++ b/src/Components/Editor/Editor.css
@@ -5,13 +5,22 @@
   user-select: text;
   white-space: pre-wrap;
   word-wrap: break-word;
+  position: relative;
+}
+.Editor textarea {
+  position: absolute;
+  top: 0;
+  left: 0;
+  opacity: 0;
+  width: 100%;
+  height: 100%;
 }
 .Editor p {
   margin: 0;
   padding: 6px 0;
   min-height: 45px;
-  display: flex;
-  align-items: center;
+  /* display: flex;
+  align-items: center; */
 }
 
 .Editor p > span {
