--- a/src/Components/Editor/Editor.css
+++ b/src/Components/Editor/Editor.css
@@ -6,6 +6,7 @@
   white-space: pre-wrap;
   word-wrap: break-word;
   position: relative;
+  outline: none;
 }
 .Editor textarea {
   position: absolute;
@@ -14,13 +15,15 @@
   opacity: 0;
   width: 100%;
   height: 100%;
+  pointer-events: none;
+  border: none;
+  padding: 0;
+  outline: none;
 }
 .Editor p {
   margin: 0;
   padding: 6px 0;
   min-height: 45px;
-  /* display: flex;
-  align-items: center; */
 }
 
 .Editor p > span {
@@ -34,6 +37,7 @@
 
 .Editor .Cursor {
   position: relative;
+  pointer-events: none;
 }
 .Editor .Cursor > span {
   position: absolute;
