--- a/src/Components/Editor/Editor.css
+++ b/src/Components/Editor/Editor.css
@@ -42,6 +42,9 @@
   position: relative;
   pointer-events: none;
 }
+.Editor .Select {
+  background-color: var(--primary-color-alpha02);
+}
 .Editor .Cursor > span {
   position: absolute;
   height: 100%;
